[page_load_metrics] Eagerly send IPCs on navigation commit

This starts the page_load_metrics IPC timer a bit earlier, so we know to start tracking a committed load in the browser process.

BUG=607550

Review-Url: https://codereview.chromium.org/1918393002
Cr-Commit-Position: refs/heads/master@{#390372}

Former-commit-id: f699127554b22fed13c910611ca8ce429041509e